# include_directories(${TOP_DIR}/src/common/dp)
# include_directories(${TOP_DIR}/src/common/vector)
include_directories()

add_executable(unit_tests                
                unit_tests.cpp) 
add_executable(test_bintree test_bintree.cpp)
target_include_directories(unit_tests PRIVATE ${TOP_DIR}/src/dp)   
target_include_directories(unit_tests PRIVATE ${TOP_DIR}/src/lib/utils)
target_include_directories(unit_tests PRIVATE ${TOP_DIR}/src/vector) 

include_directories(${TOP_DIR}/src/lib/utils)
include_directories(${TOP_DIR}/src/lib/print)
include_directories(${TOP_DIR}/src/lib/entry)
include_directories(${TOP_DIR}/src/bitmap)
include_directories(${TOP_DIR}/src/uf)
include_directories(${TOP_DIR}/src/dp)
include_directories(${TOP_DIR}/src/vector)
include_directories(${TOP_DIR}/src/list)
include_directories(${TOP_DIR}/src/stack)
include_directories(${TOP_DIR}/src/queue)
include_directories(${TOP_DIR}/src/bt)
include_directories(${TOP_DIR}/src/bst)
include_directories(${TOP_DIR}/src/bt)
include_directories(${TOP_DIR}/src/btree)
include_directories(${TOP_DIR}/src/ht)
include_directories(${TOP_DIR}/src/pq)
include_directories(${TOP_DIR}/src/string)
include_directories(${TOP_DIR}/src/graph)

add_test(NAME testVectorFind COMMAND unit_tests 1) 
# add_test(NAME testVectorSearch COMMAND unit_tests 2)
add_test(NAME test_bintree COMMAND test_bintree) 