include_directories(${TOP_DIR}/src/lib/utils)
include_directories(${TOP_DIR}/src/dp)
include_directories(${TOP_DIR}/src/vector)
include_directories(${TOP_DIR}/src/list)
include_directories(${TOP_DIR}/src/stack)
include_directories(${TOP_DIR}/src/queue)
include_directories(${TOP_DIR}/src/bt)

add_executable(Heap Heap.cpp)
add_executable(LeftHeap LeftHeap.cpp)