include_directories(${TOP_DIR}/src/lib/utils)
include_directories(${TOP_DIR}/src/lib/print)
include_directories(${TOP_DIR}/src/lib/entry)
include_directories(${TOP_DIR}/src/bitmap)
include_directories(${TOP_DIR}/src/uf)
include_directories(${TOP_DIR}/src/dp)
include_directories(${TOP_DIR}/src/vector)
include_directories(${TOP_DIR}/src/list)
include_directories(${TOP_DIR}/src/stack)
include_directories(${TOP_DIR}/src/queue)
include_directories(${TOP_DIR}/src/bt)
include_directories(${TOP_DIR}/src/bst)
include_directories(${TOP_DIR}/src/bt)
include_directories(${TOP_DIR}/src/btree)
include_directories(${TOP_DIR}/src/ht)
include_directories(${TOP_DIR}/src/pq)
include_directories(${TOP_DIR}/src/string)
include_directories(${TOP_DIR}/src/graph)

file(COPY ${PROJECT_SOURCE_DIR}/src/stack/laby 
     DESTINATION ${PROJECT_BINARY_DIR}/bin/stack/)

add_executable(Stack Stack.cpp)
add_executable(Queen Queen.cpp)
add_executable(Convert convert.cpp)
add_executable(Evaluate evaluate.cpp)
target_compile_options(Evaluate PRIVATE -Wformat)
add_executable(Labyrinth labyrinth.cpp)
add_executable(Paren paren.cpp)
