include_directories(${TOP_DIR}/src/lib/utils)
include_directories(${TOP_DIR}/src/dp)
include_directories(${TOP_DIR}/src/vector)
include_directories(${TOP_DIR}/src/list)
include_directories(${TOP_DIR}/src/queue)

add_executable(String String.cpp)
add_executable(Trie Trie.cpp)
add_executable(TST TST.cpp)
add_executable(Quick3String Quick3String.cpp)
add_executable(LSD LSD.cpp)
add_executable(MSD MSD.cpp)
